HelloUltraviolet/Fixtures/RejectedSource/Procedures/MainGeneric/Expected.uv
//! Expected diagnostic metadata for the MainGeneric rejected-source specimen.

expectedDiagnostic("E-MOD-2432", "rule.15.Main-Generic-Err")
